<?xml version="1.0"?>
<package format="2">
  <name>tf_to_fake_imu</name>
  <version>0.0.1</version>
  <description>A ROS package to publish fake IMU data based on TF transforms.</description>
  <license>BSD</license>

  <!-- <url type="website">http://wiki.ros.org/tf_to_fake_imu</url> -->

  <author email="burakaksoy20@gmail.com">Burak Aksoy</author>
  <maintainer email="burakaksoy20@gmail.com">Burak Aksoy</maintainer>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>cmake_modules</build_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>geometry_msgs</build_depend>
  <build_depend>tf</build_depend>
  <build_depend>sensor_msgs</build_depend>
  <build_depend>tf_conversions</build_depend>
  <build_depend>eigen_conversions</build_depend>
  <build_depend>std_srvs</build_depend>

  <run_depend>cmake_modules</run_depend>
  <run_depend>roscpp</run_depend>
  <run_depend>geometry_msgs</run_depend>
  <run_depend>tf</run_depend>
  <run_depend>sensor_msgs</run_depend>
  <run_depend>tf_conversions</run_depend>
  <run_depend>eigen</run_depend>
  <run_depend>eigen_conversions</run_depend>
  <run_depend>std_srvs</run_depend>

</package>
